# janis-core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  myscript.sh  notes.txt  params.yaml  pyproject.toml  pytest.ini  reqs.txt  requirements.txt  setup.py  temp.py  temp2.txt  test.R  test.nf  test.py  test.txt
.github/workflows/: publish.yml  unit_tests.yml
.janis/galaxy_wrappers/cutadapt-135b80fb1ac2/: .hg_archival.txt
.janis/galaxy_wrappers/samtools_flagstat-fe34990e5ce7/: .hg_archival.txt
core/: __init__.py
core/examples/: echo.py  secondaryfiles.py  simple.py  simplewrapped.py  userguide_workflow.py
core/graph/: node.py  stepinput.py
core/tests/: test_cltbuilder.py  test_logger.py  test_metadata.py  test_receivefrom.py  test_secondary.py  test_step.py  test_stringbuilder.py  test_tool.py  test_translation.py  test_translation_cwl.py  test_translation_wdl.py  test_types.py  test_validateinputvalue.py  test_validators.py  test_workflow.py  tests_util.py
core/tool/: commandtool.py  tool.py
core/toolbuilder/: cltconvert.py  parse_help.py
core/translations/: __init__.py  cwl.py  exportpath.py  translationbase.py  wdl.py
core/types/: __init__.py  common_data_types.py  data_types.py
core/unix/data_types/: csv.py  json.py  tarfile.py  tsv.py  zipfile.py
core/unix/tools/: cat.py  compile.py  (+5 more)
core/utils/: bracketmatching.py
core/workflow/: input.py  output.py  step.py  workflow.py
cwl_test_array_step_input/: cwl_test_array_step_input.cwl
cwl_test_array_step_input/tools/: ArrayStepTool.cwl
docs/: TODO.txt  notes.txt
echotesttool/: EchoTestTool_TEST.cwl
id/: id.cwl
ingestion/: README.md  bwamem.cwl  bwamem.wdl  convert-bwamem.sh  fromcwl.py
ingestion/bwaaligner/: BwaAligner_1_0_0.wdl
ingestion/workflow/: hello_v1_0_0.cwl  hellogen.py
janis/tests/: test_translation.py  test_translation_cwl.py
janis/translations/: cwl.py  exportpath.py
janis_core/: __init__.py  __meta__.py  cli.py
janis_core/code/: codetool.py  pythontool.py
janis_core/enums/: supportedtranslations.py
janis_core/generator/: test_generator.py  util.py
janis_core/graph/: node.py  stepinput.py  steptaginput.py
janis_core/ingestion/: SupportedIngestion.py  __init__.py  fromcwl.py  fromwdl.py  main.py
janis_core/messages/: __init__.py  config.yaml  enums.py  gather.py  inject.py  logfile.py  main.py  owner.py
janis_core/operators/: __init__.py  logical.py  operator.py  selectors.py  standard.py  stringformatter.py
janis_core/redefinitions/: __init__.py  types.py  utils.py
janis_core/registry/: entrypoints.py  registry.py  shed.py
janis_core/settings/: __init__.py  datatypes.py  graph.py  identifiers.py  messages.py  testing.py  translate.py  validation.py
janis_core/tests/: test_cltbuilder.py  test_commandtool.py  test_conditionals.py  test_file_scheme.py  test_from_cwl.py  test_from_wdl.py  test_generics_util.py  test_gxtool2janis_mapping.py  test_ingestion.py  test_ingestion_cwl.py  test_ingestion_galaxy.py  test_ingestion_wdl.py  test_janis_translate.py  test_logger.py  test_metadata.py  test_operators.py  test_python_tool.py  test_real_workflows.py  test_receivefrom.py  test_secondary.py  test_step.py  test_stringbuilder.py  test_test_runner.py  test_tool.py  test_tools.py  test_toolversions.py  test_translation.py  test_translation_bash.py  test_translation_cwl.py  test_translation_janis.py  test_translation_modules.py  test_translation_nextflow.py  test_translation_wdl.py  test_types.py  test_validateinputvalue.py  test_validators.py  test_workflow.py  tests_util.py  testtools.py
janis_core/tool/: batchrun.py  commandtool.py  cwl_tool_parser.py  documentation.py  multitool.py  test_classes.py  test_definitions.py  test_helpers.py  test_suite_runner.py  tool.py  tool_test_runner.py  tool_unit_test_helpers.py  toolevaluation.py
janis_core/toolbox/: entrypoints.py  register.py  toolbox.py
janis_core/toolbuilder/: cltconvert.py  parse_help.py
janis_core/transformation/: __init__.py
janis_core/translation_deps/: exportpath.py  supportedtranslations.py
janis_core/translation_utils/: __init__.py  datatypes.py  graph.py
janis_core/translationdeps/: exportpath.py  supportedtranslations.py
janis_core/translations/: __init__.py  bash.py  cwl.py  exportpath.py  hailbatch.py  janis.py  main.py  nextflow.py  ordering.py  todisk.py  translationbase.py  wdl.py
janis_core/types/: __init__.py  common_data_types.py  data_types.py  inputselector.py  operator.py  selectors.py  stringformatter.py
janis_core/utils/: __init__.py  bracketmatching.py  cwl_v1_0.py  cwl_v1_1.py  docparser_info.py  errors.py  file_scheme.py  file_source.py  generators.py  generics_util.py  logger.py  metadata.py  object_store.py  operator.py  pickvalue.py  scatter.py  secondary.py  validators.py
janis_core/workflow/: input.py  output.py  step.py  workflow.py  workflow2.py
ls/: ls_v0_1_0.wdl
requirements/: base.txt  documentation.txt  publish.txt  tests.txt
resources/: classes_janis_core.dot  datatypes.dot  selectors.dot  tools.dot  ~$asses_janis_core.dot
singularity_import/: Singularity.def
stepinputexpressiontestwf/: StepInputExpressionTestWF.cwl
test_add_single_to_array_edge/: test_add_single_to_array_edge-resources.yml  test_add_single_to_array_edge.cwl
test_expression_defaults/: test_expression_defaults.cwl
test_expression_defaults/tools/: EchoTestTool_TEST.cwl
test_secondary_and_alternates/: test_secondary_and_alternates_TEST.wdl
teststeptool/: TestStepTool.cwl
translated/: main.nf  nextflow.config
translated/modules/: busco.nf  cutadapt.nf  fastqc.nf  multiqc.nf  nanoplot.nf  prokka.nf  quast.nf  unicycler.nf
wf/: wf-resources.yml  wf.cwl
wf/tools/: EchoTestTool_TEST.cwl
(+1790 files in other folders)
